code/gammaSclSubM/lib/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On SKIP shift to state 46
-- On LPARAN shift to state 47
-- On LBRACKET shift to state 48
-- On IF shift to state 51
-- On ID shift to state 9
-- On DOLLAR shift to state 110
-- On ASSUME shift to state 59
-- On ASSERT shift to state 64
-- On stmt shift to state 112
-- On pvar shift to state 69
-- On program shift to state 114
-- On global shift to state 115
-- On assgn shift to state 100

State 1:
stmt -> WHILE . bexpr DO stmt OD [ SEMICOLON RPARAN OD FI EOF ELSE ]
-- On TRUE shift to state 2
-- On POSINT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPARAN shift to state 34
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 23
-- On pvar shift to state 11
-- On literal shift to state 35
-- On expr shift to state 42
-- On const shift to state 17
-- On bexpr shift to state 44
-- On affexpr shift to state 61

State 2:
literal -> TRUE . [ WHILE THEN SKIP SEMICOLON RPARAN RBRACKET OR OD LPARAN LBRACKET IF ID FI EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production literal -> TRUE 
-- On THEN reduce production literal -> TRUE 
-- On SKIP reduce production literal -> TRUE 
-- On SEMICOLON reduce production literal -> TRUE 
-- On RPARAN reduce production literal -> TRUE 
-- On RBRACKET reduce production literal -> TRUE 
-- On OR reduce production literal -> TRUE 
-- On OD reduce production literal -> TRUE 
-- On LPARAN reduce production literal -> TRUE 
-- On LBRACKET reduce production literal -> TRUE 
-- On IF reduce production literal -> TRUE 
-- On ID reduce production literal -> TRUE 
-- On FI reduce production literal -> TRUE 
-- On EOF reduce production literal -> TRUE 
-- On ELSE reduce production literal -> TRUE 
-- On DO reduce production literal -> TRUE 
-- On ASSUME reduce production literal -> TRUE 
-- On ASSERT reduce production literal -> TRUE 
-- On AND reduce production literal -> TRUE 

State 3:
const -> POSINT . [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
-- On WHILE reduce production const -> POSINT 
-- On THEN reduce production const -> POSINT 
-- On STAR reduce production const -> POSINT 
-- On SKIP reduce production const -> POSINT 
-- On SEMICOLON reduce production const -> POSINT 
-- On RSQBRACKET reduce production const -> POSINT 
-- On RPARAN reduce production const -> POSINT 
-- On RBRACKET reduce production const -> POSINT 
-- On PLUS reduce production const -> POSINT 
-- On OR reduce production const -> POSINT 
-- On OD reduce production const -> POSINT 
-- On MINUS reduce production const -> POSINT 
-- On LT reduce production const -> POSINT 
-- On LPARAN reduce production const -> POSINT 
-- On LEQ reduce production const -> POSINT 
-- On LBRACKET reduce production const -> POSINT 
-- On IF reduce production const -> POSINT 
-- On ID reduce production const -> POSINT 
-- On HAT reduce production const -> POSINT 
-- On GT reduce production const -> POSINT 
-- On GEQ reduce production const -> POSINT 
-- On FI reduce production const -> POSINT 
-- On EQ reduce production const -> POSINT 
-- On EOF reduce production const -> POSINT 
-- On ELSE reduce production const -> POSINT 
-- On DO reduce production const -> POSINT 
-- On COMMA reduce production const -> POSINT 
-- On ASSUME reduce production const -> POSINT 
-- On ASSERT reduce production const -> POSINT 
-- On AND reduce production const -> POSINT 

State 4:
literal -> NOT . literal [ WHILE THEN SKIP SEMICOLON RPARAN RBRACKET OR OD LPARAN LBRACKET IF ID FI EOF ELSE DO ASSUME ASSERT AND ]
-- On TRUE shift to state 2
-- On POSINT shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On LPARAN shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 23
-- On pvar shift to state 11
-- On literal shift to state 24
-- On expr shift to state 25
-- On const shift to state 17

State 5:
const -> MINUS . POSINT [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
const -> MINUS . FLOAT [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
-- On POSINT shift to state 6
-- On FLOAT shift to state 7

State 6:
const -> MINUS POSINT . [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
-- On WHILE reduce production const -> MINUS POSINT 
-- On THEN reduce production const -> MINUS POSINT 
-- On STAR reduce production const -> MINUS POSINT 
-- On SKIP reduce production const -> MINUS POSINT 
-- On SEMICOLON reduce production const -> MINUS POSINT 
-- On RSQBRACKET reduce production const -> MINUS POSINT 
-- On RPARAN reduce production const -> MINUS POSINT 
-- On RBRACKET reduce production const -> MINUS POSINT 
-- On PLUS reduce production const -> MINUS POSINT 
-- On OR reduce production const -> MINUS POSINT 
-- On OD reduce production const -> MINUS POSINT 
-- On MINUS reduce production const -> MINUS POSINT 
-- On LT reduce production const -> MINUS POSINT 
-- On LPARAN reduce production const -> MINUS POSINT 
-- On LEQ reduce production const -> MINUS POSINT 
-- On LBRACKET reduce production const -> MINUS POSINT 
-- On IF reduce production const -> MINUS POSINT 
-- On ID reduce production const -> MINUS POSINT 
-- On HAT reduce production const -> MINUS POSINT 
-- On GT reduce production const -> MINUS POSINT 
-- On GEQ reduce production const -> MINUS POSINT 
-- On FI reduce production const -> MINUS POSINT 
-- On EQ reduce production const -> MINUS POSINT 
-- On EOF reduce production const -> MINUS POSINT 
-- On ELSE reduce production const -> MINUS POSINT 
-- On DO reduce production const -> MINUS POSINT 
-- On COMMA reduce production const -> MINUS POSINT 
-- On ASSUME reduce production const -> MINUS POSINT 
-- On ASSERT reduce production const -> MINUS POSINT 
-- On AND reduce production const -> MINUS POSINT 

State 7:
const -> MINUS FLOAT . [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
-- On WHILE reduce production const -> MINUS FLOAT 
-- On THEN reduce production const -> MINUS FLOAT 
-- On STAR reduce production const -> MINUS FLOAT 
-- On SKIP reduce production const -> MINUS FLOAT 
-- On SEMICOLON reduce production const -> MINUS FLOAT 
-- On RSQBRACKET reduce production const -> MINUS FLOAT 
-- On RPARAN reduce production const -> MINUS FLOAT 
-- On RBRACKET reduce production const -> MINUS FLOAT 
-- On PLUS reduce production const -> MINUS FLOAT 
-- On OR reduce production const -> MINUS FLOAT 
-- On OD reduce production const -> MINUS FLOAT 
-- On MINUS reduce production const -> MINUS FLOAT 
-- On LT reduce production const -> MINUS FLOAT 
-- On LPARAN reduce production const -> MINUS FLOAT 
-- On LEQ reduce production const -> MINUS FLOAT 
-- On LBRACKET reduce production const -> MINUS FLOAT 
-- On IF reduce production const -> MINUS FLOAT 
-- On ID reduce production const -> MINUS FLOAT 
-- On HAT reduce production const -> MINUS FLOAT 
-- On GT reduce production const -> MINUS FLOAT 
-- On GEQ reduce production const -> MINUS FLOAT 
-- On FI reduce production const -> MINUS FLOAT 
-- On EQ reduce production const -> MINUS FLOAT 
-- On EOF reduce production const -> MINUS FLOAT 
-- On ELSE reduce production const -> MINUS FLOAT 
-- On DO reduce production const -> MINUS FLOAT 
-- On COMMA reduce production const -> MINUS FLOAT 
-- On ASSUME reduce production const -> MINUS FLOAT 
-- On ASSERT reduce production const -> MINUS FLOAT 
-- On AND reduce production const -> MINUS FLOAT 

State 8:
expr -> LPARAN . expr RPARAN [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On POSINT shift to state 3
-- On MINUS shift to state 5
-- On LPARAN shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On pvar shift to state 11
-- On expr shift to state 12
-- On const shift to state 17

State 9:
pvar -> ID . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSGN ASSERT AND ]
-- On WHILE reduce production pvar -> ID 
-- On THEN reduce production pvar -> ID 
-- On STAR reduce production pvar -> ID 
-- On SKIP reduce production pvar -> ID 
-- On SEMICOLON reduce production pvar -> ID 
-- On RPARAN reduce production pvar -> ID 
-- On RBRACKET reduce production pvar -> ID 
-- On PLUS reduce production pvar -> ID 
-- On OR reduce production pvar -> ID 
-- On OD reduce production pvar -> ID 
-- On MINUS reduce production pvar -> ID 
-- On LT reduce production pvar -> ID 
-- On LPARAN reduce production pvar -> ID 
-- On LEQ reduce production pvar -> ID 
-- On LBRACKET reduce production pvar -> ID 
-- On IF reduce production pvar -> ID 
-- On ID reduce production pvar -> ID 
-- On HAT reduce production pvar -> ID 
-- On GT reduce production pvar -> ID 
-- On GEQ reduce production pvar -> ID 
-- On FI reduce production pvar -> ID 
-- On EQ reduce production pvar -> ID 
-- On EOF reduce production pvar -> ID 
-- On ELSE reduce production pvar -> ID 
-- On DO reduce production pvar -> ID 
-- On ASSUME reduce production pvar -> ID 
-- On ASSGN reduce production pvar -> ID 
-- On ASSERT reduce production pvar -> ID 
-- On AND reduce production pvar -> ID 

State 10:
const -> FLOAT . [ WHILE THEN STAR SKIP SEMICOLON RSQBRACKET RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO COMMA ASSUME ASSERT AND ]
-- On WHILE reduce production const -> FLOAT 
-- On THEN reduce production const -> FLOAT 
-- On STAR reduce production const -> FLOAT 
-- On SKIP reduce production const -> FLOAT 
-- On SEMICOLON reduce production const -> FLOAT 
-- On RSQBRACKET reduce production const -> FLOAT 
-- On RPARAN reduce production const -> FLOAT 
-- On RBRACKET reduce production const -> FLOAT 
-- On PLUS reduce production const -> FLOAT 
-- On OR reduce production const -> FLOAT 
-- On OD reduce production const -> FLOAT 
-- On MINUS reduce production const -> FLOAT 
-- On LT reduce production const -> FLOAT 
-- On LPARAN reduce production const -> FLOAT 
-- On LEQ reduce production const -> FLOAT 
-- On LBRACKET reduce production const -> FLOAT 
-- On IF reduce production const -> FLOAT 
-- On ID reduce production const -> FLOAT 
-- On HAT reduce production const -> FLOAT 
-- On GT reduce production const -> FLOAT 
-- On GEQ reduce production const -> FLOAT 
-- On FI reduce production const -> FLOAT 
-- On EQ reduce production const -> FLOAT 
-- On EOF reduce production const -> FLOAT 
-- On ELSE reduce production const -> FLOAT 
-- On DO reduce production const -> FLOAT 
-- On COMMA reduce production const -> FLOAT 
-- On ASSUME reduce production const -> FLOAT 
-- On ASSERT reduce production const -> FLOAT 
-- On AND reduce production const -> FLOAT 

State 11:
expr -> pvar . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production expr -> pvar 
-- On THEN reduce production expr -> pvar 
-- On STAR reduce production expr -> pvar 
-- On SKIP reduce production expr -> pvar 
-- On SEMICOLON reduce production expr -> pvar 
-- On RPARAN reduce production expr -> pvar 
-- On RBRACKET reduce production expr -> pvar 
-- On PLUS reduce production expr -> pvar 
-- On OR reduce production expr -> pvar 
-- On OD reduce production expr -> pvar 
-- On MINUS reduce production expr -> pvar 
-- On LT reduce production expr -> pvar 
-- On LPARAN reduce production expr -> pvar 
-- On LEQ reduce production expr -> pvar 
-- On LBRACKET reduce production expr -> pvar 
-- On IF reduce production expr -> pvar 
-- On ID reduce production expr -> pvar 
-- On HAT reduce production expr -> pvar 
-- On GT reduce production expr -> pvar 
-- On GEQ reduce production expr -> pvar 
-- On FI reduce production expr -> pvar 
-- On EQ reduce production expr -> pvar 
-- On EOF reduce production expr -> pvar 
-- On ELSE reduce production expr -> pvar 
-- On DO reduce production expr -> pvar 
-- On ASSUME reduce production expr -> pvar 
-- On ASSERT reduce production expr -> pvar 
-- On AND reduce production expr -> pvar 

State 12:
expr -> LPARAN expr . RPARAN [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . PLUS expr [ STAR RPARAN PLUS MINUS HAT ]
expr -> expr . MINUS expr [ STAR RPARAN PLUS MINUS HAT ]
expr -> expr . STAR expr [ STAR RPARAN PLUS MINUS HAT ]
expr -> expr . HAT POSINT [ STAR RPARAN PLUS MINUS HAT ]
-- On STAR shift to state 13
-- On RPARAN shift to state 18
-- On PLUS shift to state 19
-- On MINUS shift to state 21
-- On HAT shift to state 15

State 13:
expr -> expr STAR . expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On POSINT shift to state 3
-- On MINUS shift to state 5
-- On LPARAN shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On pvar shift to state 11
-- On expr shift to state 14
-- On const shift to state 17

State 14:
expr -> expr . PLUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . MINUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . STAR expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr STAR expr . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . HAT POSINT [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On HAT shift to state 15
-- On WHILE reduce production expr -> expr STAR expr 
-- On THEN reduce production expr -> expr STAR expr 
-- On STAR reduce production expr -> expr STAR expr 
-- On SKIP reduce production expr -> expr STAR expr 
-- On SEMICOLON reduce production expr -> expr STAR expr 
-- On RPARAN reduce production expr -> expr STAR expr 
-- On RBRACKET reduce production expr -> expr STAR expr 
-- On PLUS reduce production expr -> expr STAR expr 
-- On OR reduce production expr -> expr STAR expr 
-- On OD reduce production expr -> expr STAR expr 
-- On MINUS reduce production expr -> expr STAR expr 
-- On LT reduce production expr -> expr STAR expr 
-- On LPARAN reduce production expr -> expr STAR expr 
-- On LEQ reduce production expr -> expr STAR expr 
-- On LBRACKET reduce production expr -> expr STAR expr 
-- On IF reduce production expr -> expr STAR expr 
-- On ID reduce production expr -> expr STAR expr 
-- On GT reduce production expr -> expr STAR expr 
-- On GEQ reduce production expr -> expr STAR expr 
-- On FI reduce production expr -> expr STAR expr 
-- On EQ reduce production expr -> expr STAR expr 
-- On EOF reduce production expr -> expr STAR expr 
-- On ELSE reduce production expr -> expr STAR expr 
-- On DO reduce production expr -> expr STAR expr 
-- On ASSUME reduce production expr -> expr STAR expr 
-- On ASSERT reduce production expr -> expr STAR expr 
-- On AND reduce production expr -> expr STAR expr 

State 15:
expr -> expr HAT . POSINT [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On POSINT shift to state 16

State 16:
expr -> expr HAT POSINT . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production expr -> expr HAT POSINT 
-- On THEN reduce production expr -> expr HAT POSINT 
-- On STAR reduce production expr -> expr HAT POSINT 
-- On SKIP reduce production expr -> expr HAT POSINT 
-- On SEMICOLON reduce production expr -> expr HAT POSINT 
-- On RPARAN reduce production expr -> expr HAT POSINT 
-- On RBRACKET reduce production expr -> expr HAT POSINT 
-- On PLUS reduce production expr -> expr HAT POSINT 
-- On OR reduce production expr -> expr HAT POSINT 
-- On OD reduce production expr -> expr HAT POSINT 
-- On MINUS reduce production expr -> expr HAT POSINT 
-- On LT reduce production expr -> expr HAT POSINT 
-- On LPARAN reduce production expr -> expr HAT POSINT 
-- On LEQ reduce production expr -> expr HAT POSINT 
-- On LBRACKET reduce production expr -> expr HAT POSINT 
-- On IF reduce production expr -> expr HAT POSINT 
-- On ID reduce production expr -> expr HAT POSINT 
-- On HAT reduce production expr -> expr HAT POSINT 
-- On GT reduce production expr -> expr HAT POSINT 
-- On GEQ reduce production expr -> expr HAT POSINT 
-- On FI reduce production expr -> expr HAT POSINT 
-- On EQ reduce production expr -> expr HAT POSINT 
-- On EOF reduce production expr -> expr HAT POSINT 
-- On ELSE reduce production expr -> expr HAT POSINT 
-- On DO reduce production expr -> expr HAT POSINT 
-- On ASSUME reduce production expr -> expr HAT POSINT 
-- On ASSERT reduce production expr -> expr HAT POSINT 
-- On AND reduce production expr -> expr HAT POSINT 

State 17:
expr -> const . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production expr -> const 
-- On THEN reduce production expr -> const 
-- On STAR reduce production expr -> const 
-- On SKIP reduce production expr -> const 
-- On SEMICOLON reduce production expr -> const 
-- On RPARAN reduce production expr -> const 
-- On RBRACKET reduce production expr -> const 
-- On PLUS reduce production expr -> const 
-- On OR reduce production expr -> const 
-- On OD reduce production expr -> const 
-- On MINUS reduce production expr -> const 
-- On LT reduce production expr -> const 
-- On LPARAN reduce production expr -> const 
-- On LEQ reduce production expr -> const 
-- On LBRACKET reduce production expr -> const 
-- On IF reduce production expr -> const 
-- On ID reduce production expr -> const 
-- On HAT reduce production expr -> const 
-- On GT reduce production expr -> const 
-- On GEQ reduce production expr -> const 
-- On FI reduce production expr -> const 
-- On EQ reduce production expr -> const 
-- On EOF reduce production expr -> const 
-- On ELSE reduce production expr -> const 
-- On DO reduce production expr -> const 
-- On ASSUME reduce production expr -> const 
-- On ASSERT reduce production expr -> const 
-- On AND reduce production expr -> const 

State 18:
expr -> LPARAN expr RPARAN . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production expr -> LPARAN expr RPARAN 
-- On THEN reduce production expr -> LPARAN expr RPARAN 
-- On STAR reduce production expr -> LPARAN expr RPARAN 
-- On SKIP reduce production expr -> LPARAN expr RPARAN 
-- On SEMICOLON reduce production expr -> LPARAN expr RPARAN 
-- On RPARAN reduce production expr -> LPARAN expr RPARAN 
-- On RBRACKET reduce production expr -> LPARAN expr RPARAN 
-- On PLUS reduce production expr -> LPARAN expr RPARAN 
-- On OR reduce production expr -> LPARAN expr RPARAN 
-- On OD reduce production expr -> LPARAN expr RPARAN 
-- On MINUS reduce production expr -> LPARAN expr RPARAN 
-- On LT reduce production expr -> LPARAN expr RPARAN 
-- On LPARAN reduce production expr -> LPARAN expr RPARAN 
-- On LEQ reduce production expr -> LPARAN expr RPARAN 
-- On LBRACKET reduce production expr -> LPARAN expr RPARAN 
-- On IF reduce production expr -> LPARAN expr RPARAN 
-- On ID reduce production expr -> LPARAN expr RPARAN 
-- On HAT reduce production expr -> LPARAN expr RPARAN 
-- On GT reduce production expr -> LPARAN expr RPARAN 
-- On GEQ reduce production expr -> LPARAN expr RPARAN 
-- On FI reduce production expr -> LPARAN expr RPARAN 
-- On EQ reduce production expr -> LPARAN expr RPARAN 
-- On EOF reduce production expr -> LPARAN expr RPARAN 
-- On ELSE reduce production expr -> LPARAN expr RPARAN 
-- On DO reduce production expr -> LPARAN expr RPARAN 
-- On ASSUME reduce production expr -> LPARAN expr RPARAN 
-- On ASSERT reduce production expr -> LPARAN expr RPARAN 
-- On AND reduce production expr -> LPARAN expr RPARAN 

State 19:
expr -> expr PLUS . expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On POSINT shift to state 3
-- On MINUS shift to state 5
-- On LPARAN shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On pvar shift to state 11
-- On expr shift to state 20
-- On const shift to state 17

State 20:
expr -> expr . PLUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr PLUS expr . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . MINUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . STAR expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . HAT POSINT [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On STAR shift to state 13
-- On HAT shift to state 15
-- On WHILE reduce production expr -> expr PLUS expr 
-- On THEN reduce production expr -> expr PLUS expr 
-- On SKIP reduce production expr -> expr PLUS expr 
-- On SEMICOLON reduce production expr -> expr PLUS expr 
-- On RPARAN reduce production expr -> expr PLUS expr 
-- On RBRACKET reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On OD reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LPARAN reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On LBRACKET reduce production expr -> expr PLUS expr 
-- On IF reduce production expr -> expr PLUS expr 
-- On ID reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GEQ reduce production expr -> expr PLUS expr 
-- On FI reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On DO reduce production expr -> expr PLUS expr 
-- On ASSUME reduce production expr -> expr PLUS expr 
-- On ASSERT reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 21:
expr -> expr MINUS . expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On POSINT shift to state 3
-- On MINUS shift to state 5
-- On LPARAN shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On pvar shift to state 11
-- On expr shift to state 22
-- On const shift to state 17

State 22:
expr -> expr . PLUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . MINUS expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr MINUS expr . [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . STAR expr [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
expr -> expr . HAT POSINT [ WHILE THEN STAR SKIP SEMICOLON RPARAN RBRACKET PLUS OR OD MINUS LT LPARAN LEQ LBRACKET IF ID HAT GT GEQ FI EQ EOF ELSE DO ASSUME ASSERT AND ]
-- On STAR shift to state 13
-- On HAT shift to state 15
-- On WHILE reduce production expr -> expr MINUS expr 
-- On THEN reduce production expr -> expr MINUS expr 
-- On SKIP reduce production expr -> expr MINUS expr 
-- On SEMICOLON reduce production expr -> expr MINUS expr 
-- On RPARAN reduce production expr -> expr MINUS expr 
-- On RBRACKET reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On OR reduce production expr -> expr MINUS expr 
-- On OD reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On LT reduce production expr -> expr MINUS expr 
-- On LPARAN reduce production expr -> expr MINUS expr 
-- On LEQ reduce production expr -> expr MINUS expr 
-- On LBRACKET reduce production expr -> expr MINUS expr 
-- On IF reduce production expr -> expr MINUS expr 
-- On ID reduce production expr -> expr MINUS expr 
-- On GT reduce production expr -> expr MINUS expr 
-- On GEQ reduce production expr -> expr MINUS expr 
-- On FI reduce production expr -> expr MINUS expr 
-- On EQ reduce production expr -> expr MINUS expr 
-- On EOF reduce production expr -> expr MINUS expr 
-- On ELSE reduce production expr -> expr MINUS expr 
-- On DO reduce production expr -> expr MINUS expr 
-- On ASSUME reduce production expr -> expr MINUS expr 
-- On ASSERT reduce production expr -> expr MINUS expr 
-- On AND reduce production expr -> expr MINUS expr 

State 23:
literal -> FALSE . [ WHILE THEN SKIP SEMICOLON RPARAN RBRACKET OR OD LPARAN LBRACKET IF ID FI EOF ELSE DO ASSUME ASSERT AND ]
-- On WHILE reduce production literal -> FALSE 
-- On THEN reduce production literal -> FALSE 
-- On SKIP reduce production literal -> FALSE 
-- On SEMICOLON reduce production literal -> FALSE 
-- On RPARAN reduce production literal -> FALSE 
-- On RBRACKET reduce production literal -> FALSE 
-- On OR reduce production literal -> FALSE 
-- On OD reduce production literal -> FALSE 
-- On LPARAN reduce production literal -> FALSE 
-- On LBRACKET reduce production literal -> FALSE 
-- On IF reduce production literal -> FALSE 
-- On ID reduce production literal -> FALSE 
-- On FI reduce production literal -> FALSE 
-- On EOF reduce production literal -> FALSE 
-- On ELSE reduce production literal -> FALSE 
-- On DO reduce production literal -> FALSE 
-- On ASSUME reduce production literal -> FALSE 
-- On ASSERT reduce production literal -> FALSE 
-- On AND reduce production literal -> FALSE 
